fix some image sizing

--- a/faq.html
+++ b/faq.html
@@ -115,7 +115,7 @@
                   people, everyone gets to know everyone else and problems tend to work themselves out. However it is
                   worth saying that at a bare minimum the expectation is to treat everyone in Job Machine with
                   respect.</p>
-                  <p><img src="images/billandted.gif" alt="BE EXCELLENT TO EACH OTHER"></p>
+                  <p><img class="image fit" src="images/billandted.gif" alt="BE EXCELLENT TO EACH OTHER"></p>
                   <p>In the words of Bill and Ted: <em>BE EXCELLENT TO EACH OTHER.</em></p>
                   <p>Additionally, our community is founded on interaction. Getting to know each other requires actually
                   talking to one another, and as such inactive members will occasionally be pruned from the community.
@@ -149,7 +149,7 @@
                   sessions. Within your user settings, there is an option to "Reset" your Encryption Secure Backup key.
                   The image below is from the user settings in the "Security and Privacy" section of user settings in
                   the <a href="https://app.jobmachine.org/">web app</a>:</p>
-                  <p><img src="images/reset-encryption.png" alt="WebApp: Settings -> Security & Privacy"></p>
+                  <p><img class="image fit" src="images/reset-encryption.png" alt="WebApp: Settings -> Security & Privacy"></p>
                   <a href="#toc" class="button">Back to the top</a>
                 </div>
 							</section>
@@ -169,8 +169,8 @@
                       </td>
                       <td>Very full featured, with support for person-to-person voice and video calling. Because it is fully featured, that means it might be a little overwhelming for some folks.</td>
                       <td>
-                        <a href="https://play.google.com/store/apps/details?id=im.vector.app"><img src="images/Google-Play-US.svg" width="150em"></a><br />
-                        <a href="https://apps.apple.com/app/vector/id1083446067"><img src="images/App-store-US-alt.svg" width="150em"></a>
+                        <a href="https://play.google.com/store/apps/details?id=im.vector.app"><img class="image" src="images/Google-Play-US.svg" width="150em"></a><br />
+                        <a href="https://apps.apple.com/app/vector/id1083446067"><img class="image" src="images/App-store-US-alt.svg" width="150em"></a>
                       </td>
                     </tr>
                     <tr>
@@ -180,8 +180,8 @@
                       </td>
                       <td>Simplified interface with a focus on being "cute". Does not support calling, but more similar to traditional text messaging apps.</td>
                       <td>
-                        <a href="https://play.google.com/store/apps/details?id=chat.fluffy.fluffychat"><img src="images/Google-Play-US.svg" width="150em"></a><br />
-                        <a href="https://apps.apple.com/app/fluffychat/id1551469600"><img src="images/App-store-US-alt.svg" width="150em"></a>
+                        <a href="https://play.google.com/store/apps/details?id=chat.fluffy.fluffychat"><img class="image" src="images/Google-Play-US.svg" width="150em"></a><br />
+                        <a href="https://apps.apple.com/app/fluffychat/id1551469600"><img class="image" src="images/App-store-US-alt.svg" width="150em"></a>
                       </td>
                     </tr>
                   </table>
@@ -225,7 +225,7 @@
                   </header>
                   <p>Matrix (the technology that powers Job Machine) supports very strong end-to-end encryption <i>if configured for the room in question</i>. Direct messages are encrypted by default, and several of our rooms are encrypted. However, many of our rooms are still bridged to a private Slack team, and that bridging would not work properly if encryption were enabled in those rooms.</p>
                   <p>To see if a room is encrypted, just look for a shield icon next to the room avatar!
-                  <span class="image"><img src="images/encrypted.png" /></span></p>
+                  <span class="image"><img class="image fit" src="images/encrypted.png" /></span></p>
                   <a href="#toc" class="button">Back to the top</a>
                 </div>
 							</section>
