make ada wallet address a text field so it looks a little better

--- a/donate.html
+++ b/donate.html
@@ -106,8 +106,11 @@
                       href="https://cardanoscan.io/address/addr1q9r2kjgf2elffyax6kwpw737g3gh0z9xtyja6scuun6lfxkv45xumkya6lva98x9w8xkmlvjc95027454h6j5vrl6ykq22e45z">
                     <img src="images/ada-wallet-qr.png">
                   </a>
-                  <p
-                      id="wallet_address">addr1q9r2kjgf2elffyax6kwpw737g3gh0z9xtyja6scuun6lfxkv45xumkya6lva98x9w8xkmlvjc95027454h6j5vrl6ykq22e45z</p>
+                  <p>Address: <input
+                      id="wallet_address" 
+                      type="text"
+                      value="addr1q9r2kjgf2elffyax6kwpw737g3gh0z9xtyja6scuun6lfxkv45xumkya6lva98x9w8xkmlvjc95027454h6j5vrl6ykq22e45z"
+                      readonly></input></p>
 
                   <p>Click the barcode to view this address on the blockchain</p>
                 </div>
