move nav buttons to header and eliminate nav bar which disappears on small screens

--- a/index.html
+++ b/index.html
@@ -30,18 +30,19 @@
 						<h1>Job Machine</h1>
 						<p>A private community for nerds.<br />
             Have an invitation token? <a href="register.html">Register your account here</a>.</p>
+            <a href="faq.html" class="button">FAQ</a>
 						<a href="https://app.jobmachine.org/" class="button">Log In</a>
 						<a href="donate.html" class="button primary">Donate</a>
 					</header>
 
-				<!-- Nav -->
+				<!-- Nav
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">About Job Machine</a></li>
 							<li><a href="#matrix">About Matrix</a></li>
               <li><a href="faq.html">FAQ</a></li>
 						</ul>
-					</nav>
+					</nav> -->
 
 				<!-- Main -->
 					<div id="main">
