--- a/register.html
+++ b/register.html
@@ -28,17 +28,17 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1>Register Your Account</h1>
+							<a href="index.html" class="button">Home</a>
+							<a href="faq.html" class="button">FAQ</a>
+							<a href="https://app.jobmachine.org/" class="button">Log In</a></li>
+							<a href="donate.html" class="button primary">Donate</a>
 					</header>
 
-				<!-- Nav -->
+				<!-- Nav
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html" class="active">Job Machine Home</a></li>
-							<li><a href="faq.html" class="active">FAQ</a></li>
-							<li><a href="donate.html" class="active">Donate</a></li>
-							<li><a href="https://app.jobmachine.org/" class="button primary">Log In</a></li>
 						</ul>
-					</nav>
+					</nav> -->
 
 				<!-- Main -->
 					<div id="main">
