add coin-check section

--- a/faq.html
+++ b/faq.html
@@ -64,6 +64,7 @@
                     <li><a href="#room-nick">How do some people have a different nickname or avatar in certain rooms?</a></li>
                     <li><a href="#unable-to-decrypt">I'm getting "Unable to decrypt" messages for only a certain person,
                         what's going on?</a></li>
+                    <li><a href="#challenge-coin">What's the deal with the Challenge Coin? What is a Coin Check?</a></li>
                   </ul>
                 </div>
 							</section>
@@ -324,6 +325,81 @@
                   <a href="#toc" class="button">Back to the top</a>
                 </div>
 							</section>
+							<section id="challenge-coin" class="main">
+                <div class="content">
+                  <header class="major">
+                    <h2>What's the deal with the Challenge Coin? What's a Coin Check?</h2>
+                  </header>
+                  <p>
+                  If you are lucky enough (or if you've signed up for a <a href="../donate.html">monthly recurring
+                    donation</a>), then you probably have a challenge coin. Why? What does it mean? What do I do with
+                  it? The following is shamelessly stolen from <a
+                                                                   href="https://signaturecoins.com">SignatureCoins.com</a>:
+                  </p>
+                  <p>
+                  Sharing a challenge coin with a group is a time-honored tradition rooted in the nation’s military
+                  representing teamwork, unity, and proof of exclusive membership.  However, forgetting your own coin
+                  can be an expensive affair, potentially costing you a full round of drinks and an evening’s worth of
+                  mockery.  Before letting that happen, you had best learn the five rules for keeping your challenge
+                  coin handy for a “coin check.”</p>
+                  <ol>
+                  <li><p><strong>Initiating a “coin check” consists of a “challenge” and a “response.” </strong>If you
+                    are the “challenger,” then you initiate a “coin check” by slamming your challenge coin onto a table
+                    or bar. All other coin holders must then “respond” by drawing their coins out and slamming them down
+                    as well or otherwise present their own challenge coins for public view.</p>
+                    <ol>
+                      <li><p>Another acceptable form of challenge is holding your coin aloft and shouting “coin check”
+                        or another verbal form of communicating your intent to challenge.</p></li>
+                      <li><p>Depending on the circumstances, it is also acceptable to insistently tap your coin upon a
+                        surface or otherwise make it audibly known you are initiating a challenge.</p></li>
+                      <li><p>Points 1.1 and 1.2 may be preferable if you wish to remain in the good graces
+                        of the bar owner or any owners of the surrounding table surfaces.</p></li>
+                    </ol>
+                  </li>
+                  <li><p><strong>Failing to respond to a “coin check” when challenged carries a penalty. </strong>Any
+                    coin holder who fails to respond to a challenge with their own coin must buy a round of drinks to
+                    everyone who successfully responded.</p>
+                    <ol>
+                      <li><p>A penalty does not necessarily need to be a drink. It can take the form of any mutually
+                        agreed upon service or item of consumption. Please refer to your own group’s specific rules on
+                        the matter.</p></li>
+                      <li><p>The other coin holders are free to mock you mercilessly. You may feel appropriate shame and
+                        remorse for negligence at will.</p></li>
+                      <li><p>Participants are allowed a single “freebie” if they genuinely did not know the rules prior
+                        to a challenge. It is the responsibility of all other participants to fully explain the
+                        rules.</p></li>
+                      <li><p>Participants are allowed to take up to, but no more than, three steps away from their
+                        position at the time of the initial challenge to retrieve their coin.</p></li>
+                    </ol>
+                  </li>
+                  <li><p><strong>Should every coin holder present successfully respond, then the challenger is
+                      penalized.</strong> If you issue a challenge and all coin holders respond, then you must honor
+                    your challenge by purchasing a round of drink to all participants.</p>
+                    <ol>
+                      <li><p>Please refer to sections 2.1 and 2.2.</p></li>
+                    </ol>
+                  </li>
+                  <li><p><strong>A challenge may be issued at any time or place.</strong> So long as there are at least
+                    two coin holders in immediate proximity to each other, a challenge may be issued at any time or
+                    place.</p>
+                    <ol>
+                      <li><p>Issuing a challenge in the middle of a (solemn) funeral, emergency, or shower officially
+                        makes you a dick, and the rules of the “coin check” may or may not be honored. Locker rooms are
+                        fair game.</p></li>
+                    </ol>
+                  </li>
+                  <li><p><strong>Losing, misplacing, or gifting away your challenge coin does not grant immunity.
+                    </strong>Until your coin is replaced, you’re likely responsible for drinks whenever a “coin check”
+                    is issued.</p>
+                    <ol>
+                      <li><p>It is highly recommended you have your challenge coin replaced before word spreads you are
+                        coinless.</p></li>
+                    </ol>
+                  </ol>
+                  
+                  <a href="#toc" class="button">Back to the top</a>
+                </div>
+              </section>
 
 					</div>
 
