challenge coin description

--- a/faq.html
+++ b/faq.html
@@ -333,7 +333,15 @@
                   <p>
                   If you are lucky enough (or if you've signed up for a <a href="../donate.html">monthly recurring
                     donation</a>), then you probably have a challenge coin. Why? What does it mean? What do I do with
-                  it? The following is shamelessly stolen from <a
+                  it?</p>
+                  <p>The challenge coin shows our logo on the obverse, the ten-toothed cog with a three-runged ladder in
+                  the center.  The ten teeth were chosen to represent that Job Machine has been around in some form or
+                  another for over ten years now, and the ladder represents the general "ladder of success" that we are
+                  all climbing, whether that's financially, personally, or specific goals that we have.</p>
+                  <p>On the reverse is an abstraction of a decentralized network, with multiple nodes connecting to each
+                  other. This diagram also makes the shape of "JM" which stands for Job Machine. Surrounding this motif
+                  is our slogan in Latin: <em>Communitas, Scientia, Salaria</em> (Community, Technology, Salary).</p> 
+                  <p>As for the purpose of the Challenge Coin itself, the following is shamelessly stolen from <a
                                                                    href="https://signaturecoins.com">SignatureCoins.com</a>:
                   </p>
                   <p>
