replace app. links with element.jobmachine.org

--- a/donate.html
+++ b/donate.html
@@ -30,7 +30,7 @@
 						<h1>Donate to the Job Machine</h1>
             <a href="index.html" class="button">Home</a>
             <a href="faq.html" class="button">FAQ</a>
-            <a href="https://app.jobmachine.org/" class="button">Log In</a>
+            <a href="https://element.jobmachine.org/" class="button">Log In</a>
 					</header>
 
 				<!-- Nav
