--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<p>A private community for nerds.<br />
             Have an invitation token? <a href="register.html">Register your account here</a>.</p>
             <a href="faq.html" class="button">FAQ</a>
-						<a href="https://app.jobmachine.org/" class="button">Log In</a>
+						<a href="https://element.jobmachine.org/" class="button">Log In</a>
 						<a href="donate.html" class="button primary">Donate</a>
 					</header>
 
