--- a/register.html
+++ b/register.html
@@ -30,7 +30,7 @@
 						<h1>Register Your Account</h1>
 							<a href="index.html" class="button">Home</a>
 							<a href="faq.html" class="button">FAQ</a>
-							<a href="https://app.jobmachine.org/" class="button">Log In</a></li>
+							<a href="https://element.jobmachine.org/" class="button">Log In</a></li>
 							<a href="donate.html" class="button primary">Donate</a>
 					</header>
 
@@ -89,7 +89,8 @@
       <header><h2 id="welcome"></h2></header>
 
       <section>
-        <p>Your account has been successfully created. Click <a href="https://app.jobmachine.org/">here</a> to login in to the webapp.</p>
+        <p>Your account has been successfully created. Click <a href="https://element.jobmachine.org/">here</a> to login in to the webapp.</p>
+        <p>Don't like the Element webapp? Try <a href="https://cinny.jobmachine.org">Cinny</a> instead.</p>
         <p>Or choose one of the <a href="https://matrix.org/docs/projects/clients-matrix">many other clients
           available.</a> Please refer to the <a href="faq.html#connect">Frequently Asked Questions</a> for assistance logging
         into other clients.</p>
@@ -97,7 +98,7 @@
 
       <footer>
         <button class="button secondary modal-footer-button-close">Close</button>
-        <a href="https://app.jobmachine.org"><button class="button primary modal-footer-button-close">Log
+        <a href="https://element.jobmachine.org"><button class="button primary modal-footer-button-close">Log
             In</button></a>
       </footer>
     </div>
