--- a/faq.html
+++ b/faq.html
@@ -29,7 +29,7 @@
 					<header id="header" class="alt">
 						<h1>Frequently Asked Questions</h1>
             <a href="index.html" class="button">Home</a>
-            <a href="https://app.jobmachine.org/" class="button">Log In</a>
+            <a href="https://element.jobmachine.org/" class="button">Log In</a>
 						<a href="donate.html" class="button primary">Donate</a>
 					</header>
 
@@ -38,7 +38,7 @@
 						<ul>
 							<li><a href="index.html" class="active">Job Machine Home</a></li>
 							<li><a href="donate.html" class="active">Donate</a></li>
-							<li><a href="https://app.jobmachine.org/" class="button primary">Log In</a></li>
+							<li><a href="https://element.jobmachine.org/" class="button primary">Log In</a></li>
 						</ul>
 					</nav> -->
 
@@ -137,7 +137,7 @@
                   <header class="major">
                     <h2>I forgot my password!</h2>
                   </header>
-                  <p>If you forgot your password, you can reset it by visiting the <a href="https://app.jobmachine.org/">the web app</a> login page, and simply follow the links to reset your password. This requires that you have associated an email address with your account at some point in time... if you never have, you will need to reach out to an administrator to reset your password.<p>
+                  <p>If you forgot your password, you can reset it by visiting the <a href="https://element.jobmachine.org/">the web app</a> login page, and simply follow the links to reset your password. This requires that you have associated an email address with your account at some point in time... if you never have, you will need to reach out to an administrator to reset your password.<p>
                   <p>Resetting your password will cycle your encryption keys... basically that means that you won't be able to read any old messages in <a href="#encryption">encrypted rooms</a> unless you have another session logged in somewhere. If you do, you can export your encryption keys, and import them into your new sessions. For help, please reach out to an administrator.</p>
                   <a href="#toc" class="button">Back to the top</a>
                 </div>
@@ -152,7 +152,7 @@
                   <p>If you lost your key or forgot your passphrase, you can reset it from one of your logged-in
                   sessions. Within your user settings, there is an option to "Reset" your Encryption Secure Backup key.
                   The image below is from the user settings in the "Security and Privacy" section of user settings in
-                  the <a href="https://app.jobmachine.org/">web app</a>:</p>
+                  the <a href="https://element.jobmachine.org/">web app</a>:</p>
                   <p><img class="image fit" src="images/reset-encryption.png" alt="WebApp: Settings -> Security & Privacy"></p>
                   <a href="#toc" class="button">Back to the top</a>
                 </div>
@@ -205,7 +205,7 @@
                     <li>Matrix ID: <code>@your-username:jobmachine.org</code></li>
                     <li>Homeserver Address: <code>https://synapse.jobmachine.org</code></li>
                   </ul>
-                  <p>Some clients are able to figure this out just by entering your full Matrix ID, others can't. For the easiest use, we recommend you just use the <a href="https://app.jobmachine.org/" target="_blank">web app</a> which will automatically connect you to the correct homeserver.<p>
+                  <p>Some clients are able to figure this out just by entering your full Matrix ID, others can't. For the easiest use, we recommend you just use the <a href="https://element.jobmachine.org/" target="_blank">web app</a> which will automatically connect you to the correct homeserver.<p>
                   <p>If you're having trouble, reach out to an admin in the <code>#waitingroom:jobmachine.org</code> and someone will help sort you out.</p>
                   <a href="#toc" class="button">Back to the top</a>
                 </div>
