add stripe customer portal link

--- a/donate.html
+++ b/donate.html
@@ -54,10 +54,16 @@
                 donation, simply use the "quantity" feature while checking out to give your desired donation. <b>Members
                 who donate on a recurring subscription plan may be eligible for extra swag and gifts if there are funds
                 available as a thank you for their continuing contributions.</b></p>
-                <p>All donations are handled through Stripe for secure payment processing. <b>To discontinue a recurring
-                  donation, reach out to an admin in matrix or email <a
-                                                                         href="mailto:donate@jobmachine.org">donate@jobmachine.org</a>,
-                 and we will discontinue it at our earliest possible convenience, usually within 2-4 days.</b></p>
+                <p>All donations are handled through Stripe for secure payment processing. You can manage your
+                subscription through <a href="https://billing.stripe.com/p/login/eVaaGf9Dk5sTbJu288">the stripe customer
+                  portal</a> as long as you know the email address associated with your payment. If you don't, and want
+                to discontinue a recurring donation, reach out to an admin in matrix or email <a
+                                                                                                  href="mailto:donate@jobmachine.org">donate@jobmachine.org</a>,
+                                                                                                and we will discontinue
+                                                                                                it at our earliest
+                                                                                              possible convenience,
+                                                                                              usually within 2-4
+                                                                                            days.</b></p>
                 <p>If you're into crypto, we also accept <a href="#ada">donations in ADA</a>, the currency of the
                 Cardano network.</p>
 
