--- a/faq.html
+++ b/faq.html
@@ -216,8 +216,10 @@
                   <header class="major">
                     <h2>I can't find a room for my favorite topic.</h2>
                   </header>
-                  <p>Many topics have their own rooms, but not all. Feel free to bring your conversation to a vaguely related parent room or the breakroom. If it starts to take over and pick up steam from several people, feel free to create your own room! All it takes to make it officially part of Job Machine is letting an admin know so they can add it to our room lists.</p>
-                  <p>If you create a room, you are automatically an admin of that room. Steward the room according to general Job Machine principals, and if you plan on abandoning it please ensure that you make someone else you trust an admin.</p>
+                  <p>Many topics have their own rooms, but not all. Feel free to bring your conversation to a vaguely
+                  related parent room or the breakroom. If it starts to take over and pick up steam from several people,
+                  ping an admin and we can use a special bot command to create a new room that aligns with the Job
+                  Machine standards and will be added automatically to the Space.</p>
                   <a href="#toc" class="button">Back to the top</a>
                 </div>
 							</section>
