add links to element and cinny in clients section

--- a/faq.html
+++ b/faq.html
@@ -207,6 +207,10 @@
                   </ul>
                   <p>Some clients are able to figure this out just by entering your full Matrix ID, others can't. For the easiest use, we recommend you just use the <a href="https://element.jobmachine.org/" target="_blank">web app</a> which will automatically connect you to the correct homeserver.<p>
                   <p>If you're having trouble, reach out to an admin in the <code>#waitingroom:jobmachine.org</code> and someone will help sort you out.</p>
+                  <p>If you're just looking for an alternative instead of <a href="https://element.jobmachine.org">Element</a>, 
+                      check out <a href="https://cinny.jobmachine.org">Cinny</a>,
+                      which is perhaps less featureful in some aspects but a more pleasant user experience in
+                      others.</p>
                   <a href="#toc" class="button">Back to the top</a>
                 </div>
 							</section>
