--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <meta property="og:title" content="Job Machine - A private community of nerds." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/logo_248.png" />
+    <meta property="og:image" content="images/logo-flat.png" />
     <meta property="og:url" content="https://www.jobmachine.org" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -67,7 +67,7 @@
 											<li><a href="faq.html" class="button primary">Frequently Asked Questions</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/logo.svg" alt="" /></span>
+									<span class="image"><img src="images/logo-flat.svg" alt="" /></span>
 								</div>
 							</section>
 
