forgot the og images on all the other pages

--- a/donate.html
+++ b/donate.html
@@ -13,7 +13,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <meta property="og:title" content="Job Machine - Donate" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/logo_248.png" />
+    <meta property="og:image" content="images/logo-flat.png" />
     <meta property="og:url" content="https://www.jobmachine.org/donate.html" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
