add privacy footer

--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<p class="copyright">&copy; 2021. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+            <p class="copyright">Messages in the Job Machine rooms are private and have never been shared with any third
+            parties unless explicitely indicated.</p> 
 					</footer>
 
 			</div>
