--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					<footer id="footer">
 						<p class="copyright">&copy; 2021. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
             <p class="copyright">Messages in the Job Machine rooms are private and have never been shared with any third
-            parties unless explicitely indicated.</p> 
+            parties unless explicitly indicated.</p> 
 					</footer>
 
 			</div>
