update m.org clients page link

--- a/register.html
+++ b/register.html
@@ -91,7 +91,7 @@
       <section>
         <p>Your account has been successfully created. Click <a href="https://element.jobmachine.org/">here</a> to login in to the webapp.</p>
         <p>Don't like the Element webapp? Try <a href="https://cinny.jobmachine.org">Cinny</a> instead.</p>
-        <p>Or choose one of the <a href="https://matrix.org/docs/projects/clients-matrix">many other clients
+        <p>Or choose one of the <a href="https://matrix.org/ecosystem/clients/">many other clients
           available.</a> Please refer to the <a href="faq.html#connect">Frequently Asked Questions</a> for assistance logging
         into other clients.</p>
       </section>
