no hatespeech or violent rhetoric will be tolerated

--- a/faq.html
+++ b/faq.html
@@ -121,6 +121,9 @@
                   respect.</p>
                   <p><img class="image fit" src="images/billandted.gif" alt="BE EXCELLENT TO EACH OTHER"></p>
                   <p>In the words of Bill and Ted: <em>BE EXCELLENT TO EACH OTHER.</em></p>
+                  <p>The only specific guidance is that calls for violence or hate speech will not be tolerated, as these do
+                  viewpoints do not support a diverse community or foster intelligent discussion. This is the only
+                  warning.</p>
                   <p>Additionally, our community is founded on interaction. Getting to know each other requires actually
                   talking to one another, and as such inactive members will occasionally be pruned from the community.
                   If you are removed from the Job Machine and want to rejoin the conversation, ask to be re-invited by
