--- a/faq.html
+++ b/faq.html
@@ -121,7 +121,7 @@
                   respect.</p>
                   <p><img class="image fit" src="images/billandted.gif" alt="BE EXCELLENT TO EACH OTHER"></p>
                   <p>In the words of Bill and Ted: <em>BE EXCELLENT TO EACH OTHER.</em></p>
-                  <p>The only specific guidance is that calls for violence or hate speech will not be tolerated, as these do
+                  <p>The only specific guidance is that calls for violence or hate speech will not be tolerated, as these
                   viewpoints do not support a diverse community or foster intelligent discussion. This is the only
                   warning.</p>
                   <p>Additionally, our community is founded on interaction. Getting to know each other requires actually
